[metadata]
name = pwmchip-WerWolf
version = 0.1
author = Armin Wolf
author_email = W_Armin@gmx.de
description = Python library for interfacing with the Linux PWM sysfs interface
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Wer-Wolf/pwmchip
project_urls =
    Bug Tracker = https://github.com/Wer-Wolf/pwmchip/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: LGPL-3.0 License
    Operating System :: Linux

[options]
packages = .
python_requires = >=3.6
